--- a/.github/workflows/run-unit-test-and-upload-codecov.yml
+++ b/.github/workflows/run-unit-test-and-upload-codecov.yml
@@ -63,6 +63,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y doxygen lcov gcovr pandoc
+          source /opt/ros/humble/setup.bash
+          sudo apt install -y ros-${ROS_DISTRO}-catch-ros2
           
       # Run all unit test, integration test, and generate combined coverage report
       - name: Build, run unit test, and generate coverage report
